<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/record_list_margin_bottom"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/heroImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/matchType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/match_type_default"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/heroImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/match_time_default"
        app:layout_constraintStart_toStartOf="@+id/matchType"
        app:layout_constraintTop_toBottomOf="@+id/victory" />

    <ImageView
        android:id="@+id/stateIcon"
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_done_blue_24dp" />

    <Button
        android:id="@+id/backupButton"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:text="@string/backup_button"
        app:layout_constraintStart_toEndOf="@+id/stateIcon"
        app:layout_constraintTop_toTopOf="@+id/stateIcon" />

    <TextView
        android:id="@+id/successPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/success_backup_prompt"
        app:layout_constraintStart_toEndOf="@+id/stateIcon"
        app:layout_constraintTop_toTopOf="@+id/stateIcon" />

    <TextView
        android:id="@+id/victory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/victory"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/matchType"
        app:layout_constraintTop_toBottomOf="@+id/matchType" />
</androidx.constraintlayout.widget.ConstraintLayout>
